--- a/views/contact.pug
+++ b/views/contact.pug
@@ -5,22 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IT=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <title>Portfolio</title>
+        <title> #{title} </title>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.waves.min.js"></script>
-
+       
     </head>
     <body>
-      
       <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="/">Home</a>
+        <a class="flex-sm-fill text-sm-center nav-link"  href="/">Home</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="/skills">Skills</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="/experience">Experience</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="/contact">Contact</a>
+        <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="/contact">Contact</a>
       </nav>
         
-     
-      
     </body>
 </html>
