--- a/views/index.html
+++ b/views/index.html
@@ -9,18 +9,55 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.waves.min.js"></script>
+        <link rel="stylesheet" href="..\src\style.css">
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tektur&display=swap" rel="stylesheet">
 
     </head>
-    <body>
+    <body data-bs-spy="scroll" data-bs-target="#navbar">
       
-      <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="/">Home</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="/skills">Skills</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="/experience">Experience</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="/contact">Contact</a>
+      <nav class="nav nav-pills flex-column flex-sm-row sticky-top" id="navbar">
+        <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#home">Home</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="#skills">Skills</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="#experience">Experience</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="#contact">Contact</a>
       </nav>
-        
-     
-      
+             
+      <div id="bg" class="wrapper">
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+    </div>
+    <div id="home"></div>
+        <div id="hello">
+          <h1>Hello!</h1><span class="wave">👋</span>
+        </div>
+      </div>
+        <div id="scroll1">
+        <div class="picture"></div>
+        <div class="about">
+          <h1>I'm Himanshu!</h1>
+          Hello, I’m a full stack web developer and android app developer with a passion for creating innovative and user-friendly solutions. I have experience in developing web applications using JavaScript frameworks such as React, Angular and Vue, as well as backend technologies such as Node.js, Express and MongoDB. I also have experience in developing android applications using Java and Kotlin, as well as integrating them with Firebase and other APIs. Some of my projects include a stock management website, a social media app, a fitness tracker app and a quiz app. I’m also proficient in Python and have used it for data analysis, web scraping and automation. In addition, I have skills in infrastructure management using tools such as AWS, Docker and Kubernetes. I’m always eager to learn new technologies and improve my skills. You can check out some of my work below or contact me for more details.
+        </div>
+        </div>
+        </div>
+        <div id="skills"></div>
+        <div id="experience"></div>
+        <div id="contact"></div>
+
     </body>
 </html>
