Hello guys , Gaurav this side.
Hello guys , Gaurav this side.

--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,11 @@
         <a class="flex-sm-fill text-sm-center nav-link" href="#experience">Experience</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="#contact">Contact</a>
       </nav>
-             
+
+      <div id="container-floating">
+        <button class="plus" type="button">Link</button>
+      </div>
+
       <div id="bg" class="wrapper">
       <div><span class="dot"></span></div>
       <div><span class="dot"></span></div>
@@ -55,7 +59,51 @@
         </div>
         </div>
         </div>
-        <div id="skills"></div>
+        <!------------------------------------------------------------------------------------------------------------------------------->
+        <div id="skills">
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 row-custom">
+          <div class="col">
+            <div class="card h-100 card-custom">
+              
+              <div class="card-body ">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 card-custom">
+              
+              <div class="card-body ">
+                <h3 class="card-title">Card title</h5>
+                <h6>langaguafeadfaf</h6>
+                <h6>langaguafeadfaf</h6>
+                <h6>langaguafeadfaf</h6>
+                <h6>langaguafeadfaf</h6>
+                <h6>langaguafeadfaf</h6>
+                <h6>langaguafeadfaf</h6>
+                <h6>langaguafeadfaf</h6>
+                <h6>langaguafeadfaf</h6>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 card-custom">
+              
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+<!------------------------------------------------------------------------------------------------------------------------------------------->
         <div id="experience"></div>
         <div id="contact"></div>
 
