--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,37 @@ body {
     height: 5vh;
 }
 
+#container-floating{
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  bottom: 30px;
+  right: 30px;
+  z-index: 50px;
+}
+
+.row-custom{
+  margin-left: 0!important;
+  margin-right: 0!important;
+}
+
+.plus {
+  color: Blue;
+  position: absolute;
+  top: 0;
+  display: block;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-family: 'Roboto';
+  font-weight: 300;
+}
+
 #home{
     display: flex;
     flex-direction: column;
@@ -72,6 +103,16 @@ body {
     align-self: center;
     align-items: center;
     flex-direction: row;
+}
+
+.card-custom{
+    
+    box-shadow: 10px 10px 5px gray;
+
+}
+
+.card {
+  text-align: center;
 }
 
 #experience {
