--- a/views/index.html
+++ b/views/index.html
@@ -46,11 +46,28 @@
       <div><span class="dot"></span></div>
       <div><span class="dot"></span></div>
     </div>
-    <div id="home"></div>
-        <div id="hello">
+    <div id="home">
+      <div id="hello">
           <h1>Hello!</h1><span class="wave">👋</span>
-        </div>
-      </div>
+    </div>
+    
+    <div class="waviy">
+      <span style="--i:1">I'</span>
+      <span style="--i:2">m</span>
+      <span style="--i:3">&nbsp;&nbsp; </span>
+      <span style="--i:3">H </span>
+      <span style="--i:4">I</span>
+      <span style="--i:5">M</span>
+      <span style="--i:6">A</span>
+      <span style="--i:7">N</span>
+      <span style="--i:8">S</span>
+      <span style="--i:9">H</span>
+      <span style="--i:10">U</span>
+   
+    </div>
+
+
+    </div>
         <div id="scroll1">
         <div class="picture"></div>
         <div class="about">
@@ -67,10 +84,12 @@
             <div class="card h-100 card-custom">
               
               <div class="card-body ">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Languages</h5>
+                <h6>C</h6>
+                <h6>C++</h6>
+                <h6>Python</h6>
+                <h6>Java</h6>
               </div>
-              
             </div>
           </div>
           <div class="col">
@@ -104,7 +123,99 @@
         </div>
       </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-        <div id="experience"></div>
+        <div id="experience">
+          <div class="exp">
+            <h1 class="exp-title">
+              Accenture Solutions Private Limited
+            </h1>
+            <h4 class="exp-subheading">
+              Packaged App Development Analyst
+            </h4>
+            <h6 class="location">
+              Feb 2023 - Current | Gurugram, India
+            </h6>
+            <div>
+              <ul>
+                <li>
+                  Deputy SME for the RTS and WPS Local Bundle Team for ROCHE.
+                </li>
+                <li>
+                  Maintained Customized Application Launcher for Windows Machines.
+                </li>
+                <li>
+                  Refractor and implement Applicaion Launcher using Powershell Powershell Scripts and XML.  
+                </li>
+                <li>
+                  Provide strong Technical leadership and guidance to the geographically distributed RTS/DCS teams.
+                </li>
+              </ul> 
+            </div>
+          </div>
+          <div class="exp">
+            <h1 class="exp-title">
+              Accenture Solutions Private Limited
+            </h1>
+            <h4 class="exp-subheading">
+              Application Development Associate
+            </h4>
+            <h6 class="location">
+              Feb 2021 - Jan 2023 | Gurugram, India
+            </h6>
+            <div>
+              <ul>
+                <li>
+                  Joined Roche Holding AG Tech Support Project in April.
+                </li>
+                <li>
+                  Windows Desktop Management.
+                </li>
+                <li>
+                  Handle Operations as a cloud support associate. 
+                </li>
+                <li>
+                  Lead the weekly client call for the techincal and operational issues.
+                </li>
+                <li>
+                  Worked closely with global support development, quality assurance and tool teams to deliver solutions.
+                </li>
+                <li>
+                  Worked on tools like PRTG(Monitoring), KACE(System Management), Acronis(Backup and Restore Management), Veeva docs(Document Management).
+                </li>
+                <li>
+                  Access management, Administration, Service Now
+                </li>
+                <li>
+                  Managed the tickets and guided the team towards the reduction of the backlog.
+                </li>
+              </ul> 
+            </div>
+          </div>
+          <div class="exp">
+            <h1 class="exp-title">
+              HelpByTech
+            </h1>
+            <h4 class="exp-subheading">
+              Software Developer - I
+            </h4>
+            <h6 class="location">
+              Jun 2020 - Feb 2021
+            </h6>
+            <div>
+              <ul>
+                <li>
+                  Created a MicroService which integrates third party services and external API's as a part of implementation of ad-fraud detection project.
+                </li>
+                <li>
+                  Optimized a RESTful API for a web application.
+                </li>
+                <li>
+                  Used MongoDB to develop API which interacts with backend databases.
+                </li>
+              </ul> 
+            </div>
+          </div>
+        </div>
+ <!-- -------------------------------------------------------------------------------------------------------------------------------------------------        -->
         <div id="contact"></div>
 
     </body>
