--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
     opacity: 0.2;
   }
 */
+
 body {
     z-index: 0;
     height: 100%;
@@ -84,7 +85,7 @@ body {
 
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 * {
-  padding: 0;
+  padding: 5vh;
   margin: 0;
   box-sizing: border-box;
 }
@@ -117,7 +118,6 @@ body {
 
 
 
-
 #intro {
     display: flex;
     flex-direction: column;
@@ -143,7 +143,7 @@ body {
 }
 
 .picture {
-    background-image: url();
+    /* background-image: url('/src/images/avatar.png'); */
     width:40vw;
 }
 
@@ -159,6 +159,7 @@ body {
 .card-custom{
     
     box-shadow: 10px 10px 5px gray;
+    /* background-color: rgb(213, 224, 224); */
 
 }
 
@@ -174,7 +175,7 @@ body {
     flex-direction: column;
     align-self: center;
     align-items: center;
-    flex-direction: column;
+   
     padding-bottom: 10vh;
 }
 
@@ -183,6 +184,11 @@ body {
   margin-right: 10vw;
   width: 78vw;
 }
+h1.title{
+  padding: 10vh;
+  text-align: center;
+  
+}
 
 #contact {
     height:95vh;
@@ -190,8 +196,168 @@ body {
     flex-direction: column;
     align-self: center;
     align-items: center;
-    flex-direction: row;
+    justify-content: center;
 }
+
+.social{
+  display: flex;
+  flex-direction: row;
+  width: 98vw;
+  align-items: center;
+  justify-content: center;
+}
+
+.social img {
+  width: 10vw;
+  margin: 5vw;
+  
+}
+
+.btn{
+  background-color: #3ea0e0;
+  margin-top: 10vh;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #000;
+  padding: 10px 20px;
+  border-radius: 5000px;
+  transition: all 0.3s;
+}
+
+.btn:hover{
+  transform: scale(1.2);
+}
+
+
+/* ------------------contact--- */
+
+  .decor {
+  box-sizing: border-box;
+  }
+  /* html, body {
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 14px; 
+  color: #666;
+  } */
+  input, textarea { 
+  outline: none;
+  }
+  /* body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background: #5a7233;
+  } */
+  h1 {
+  margin-top: 0;
+  font-weight: 500;
+  }
+  form {
+  position: relative;
+  width: 80%;
+  border-radius: 30px;
+  background: #000000;
+  }
+  .form-left-decoration,
+  .form-right-decoration {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 20px;
+  border-radius: 20px;
+  background: #5a7233;
+  }
+  .form-left-decoration {
+  bottom: 60px;
+  left: -30px;
+  }
+  .form-right-decoration {
+  top: 60px;
+  right: -30px;
+  }
+  .form-left-decoration:before,
+  .form-left-decoration:after,
+  .form-right-decoration:before,
+  .form-right-decoration:after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 20px;
+  border-radius: 30px;
+  background: #000000;
+  }
+  .form-left-decoration:before {
+  top: -20px;
+  }
+  .form-left-decoration:after {
+  top: 20px;
+  left: 10px;
+  }
+  .form-right-decoration:before {
+  top: -20px;
+  right: 0;
+  }
+  .form-right-decoration:after {
+  top: 20px;
+  right: 10px;
+  }
+  .circle {
+  position: absolute;
+  bottom: 80px;
+  left: -55px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #fff;
+  }
+  .form-inner {
+  padding: 40px;
+  }
+  .form-inner h1{
+    color: #ffffff;
+  }
+  .form-inner input,
+  .form-inner textarea {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 20px;
+  background: #c3d0d8;
+  }
+  .form-inner textarea {
+  resize: none;
+  }
+  button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 20px;
+  border: none;
+  border-bottom: 4px solid #3e4f24;
+  background: #5a7233; 
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  }
+  button:hover {
+  background: #3e4f24;
+  } 
+  @media (min-width: 568px) {
+  form {
+  width: 60%;
+  }
+  }
+
+/* contact end */
+
+
 /*  
  #bg {
     position: relative;
@@ -388,4 +554,14 @@ body {
       transform: scale(1.3) translateY(-100px) rotate(360deg);
     }
   }
-  
+  /* =====================================================*/
+
+  .thank {
+    height:95vh;
+    width: 98vw;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
