--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import "compass/css3";
 /* #bg {
     position: relative;
     display: flex;
@@ -18,7 +19,7 @@ body {
     display: flex;
     flex-direction: column;
     /* background-color: #dfe6ea; */
-    background-image: linear-gradient(to bottom, rgb(225, 236, 227) , rgb(135, 223, 229));
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0) , rgb(14, 108, 113));
 }
 .nav{
     height: 5vh;
@@ -62,6 +63,8 @@ body {
     flex-direction: column;
     height:95vh;
     position: relative;
+    color: rgb(255, 0, 0);
+    
 }
 #hello {
     font-family: 'Tektur', cursive;;
@@ -94,14 +97,15 @@ body {
 
 .waviy {
   position: relative;
-  -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
+  -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.4));
   font-size: 60px;
+  
 }
 .waviy span {
   font-family: 'Alfa Slab One', cursive;
   position: relative;
   display: inline-block;
-  color: #000000;
+  color: #ff0000;
   text-transform: uppercase;
   animation: waviy 1s infinite;
   animation-delay: calc(.1s * var(--i));
@@ -141,7 +145,7 @@ body {
     width:58vw;
     text-align: justify;
     padding: 20px;
-    
+    color: #fff;
 }
 
 .picture {
@@ -177,7 +181,7 @@ body {
     flex-direction: column;
     align-self: center;
     align-items: center;
-   
+    color: #fff;
     padding-bottom: 10vh;
 }
 
@@ -189,7 +193,7 @@ body {
 h1.title{
   padding: 10vh;
   text-align: center;
-  
+  color: rgb(255, 251, 0);
 }
 
 #contact {
@@ -457,7 +461,7 @@ h1.title{
   .wrapper div {
     height: 60px;
     width: 60px;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgb(101, 139, 193);
     border-radius: 50px;
     position: absolute;
     top: 10%;
@@ -468,7 +472,7 @@ h1.title{
     height: 10px;
     width: 10px;
     border-radius: 50px;
-    background: rgba(224, 8, 8, 0.5);
+    background: rgba(7, 205, 205, 0.721);
     position: absolute;
     top: 20%;
     right: 20%;
@@ -567,3 +571,35 @@ h1.title{
     display: flex;
     flex-direction: column;
   }
+
+  /* ----------------------------------------- */
+  .char{
+    /* font-size: 40px; */
+    /* height: 40px; */
+    animation: an 1s ease-out 1 both;
+    display: inline-block;
+}
+
+@keyframes an{
+    from{
+        opacity: 0;
+        transform: perspective(300px) translate3d(-1px, -1px, -1px) rotate3d(0, -1, 0, 180deg);
+    }
+    to{
+        opacity: 1;
+        transform: perspective(300px) translate3d(0, 0, 0);
+    }
+}
+/* ---------- */
+/* section{ */
+  li{
+    opacity: 0;
+    transition: ease all 1s;
+    margin-left: -15px;
+    
+    &.fadeIn{
+      opacity: 1;
+      margin-left: 0;
+    }
+  }
+/* } */
