--- a/views/index.html
+++ b/views/index.html
@@ -94,6 +94,8 @@
                 <h6>C++</h6>
                 <h6>Python</h6>
                 <h6>Java</h6>
+                <h6>JavaScript</h6>
+                <h6>SQL</h6>
               </div>
             </div>
           </div>
@@ -131,98 +133,139 @@
         <div id="experience">
           <section>
           <h1 class="title">Experience</h1>
+          
           <div class="exp">
             <h1 class="exp-title">
-              <div data-scroll data-scroll-repeat="10" data-scroll-reverse="true">
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
               Accenture Solutions Private Limited
             </div>
             </h1>
             <h4 class="exp-subheading">
-              Packaged App Development Analyst
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">Packaged App Development Analyst</div>
             </h4>
             <h6 class="location">
-              Feb 2023 - Current | Gurugram, India
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">Feb 2023 - Current | Gurugram, India</div>
             </h6>
             <div>
               <ul>
-                <li>
-                  Deputy SME for the RTS and WPS Local Bundle Team for ROCHE.
-                </li>
-                <li>
-                  Maintained Customized Application Launcher for Windows Machines.
-                </li>
-                <li>
-                  Refractor and implement Applicaion Launcher using Powershell Powershell Scripts and XML.  
-                </li>
-                <li>
-                  Provide strong Technical leadership and guidance to the geographically distributed RTS/DCS teams.
-                </li>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Deputy SME for the RTS and WPS Local Bundle Team for ROCHE.
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Maintained Customized Application Launcher for Windows Machines.
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100"> 
+                  <li>
+                    Refractor and implement Applicaion Launcher using Powershell Powershell Scripts and XML.
+                  </li>
+                </div> 
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Provide strong Technical leadership and guidance to the geographically distributed RTS/DCS teams.
+                  </li>
+                </div>
               </ul> 
             </div>
           </div>
           <div class="exp">
             <h1 class="exp-title">
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
               Accenture Solutions Private Limited
+              </div>
             </h1>
             <h4 class="exp-subheading">
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
               Application Development Associate
+              </div>
             </h4>
             <h6 class="location">
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
               Feb 2021 - Jan 2023 | Gurugram, India
+              </div>
             </h6>
             <div>
               <ul>
-                <li>
-                  Joined Roche Holding AG Tech Support Project in April.
-                </li>
-                <li>
-                  Windows Desktop Management.
-                </li>
-                <li>
-                  Handle Operations as a cloud support associate. 
-                </li>
-                <li>
-                  Lead the weekly client call for the techincal and operational issues.
-                </li>
-                <li>
-                  Worked closely with global support development, quality assurance and tool teams to deliver solutions.
-                </li>
-                <li>
-                  Worked on tools like PRTG(Monitoring), KACE(System Management), Acronis(Backup and Restore Management), Veeva docs(Document Management).
-                </li>
-                <li>
-                  Access management, Administration, Service Now
-                </li>
-                <li>
-                  Managed the tickets and guided the team towards the reduction of the backlog.
-                </li>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Joined Roche Holding AG Tech Support Project in April.
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Windows Desktop Management.
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Handle Operations as a cloud support associate. 
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Lead the weekly client call for the techincal and operational issues.
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Worked closely with global support development, quality assurance and tool teams to deliver solutions.
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Worked on tools like PRTG(Monitoring), KACE(System Management), Acronis(Backup and Restore Management), Veeva docs(Document Management).
+                  </li>
+                </div>  
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Access management, Administration, Service Now
+                  </li>
+                </div> 
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Managed the tickets and guided the team towards the reduction of the backlog.
+                  </li>
+                </div>
               </ul> 
             </div>
           </div>
           <div class="exp">
             <h1 class="exp-title">
-              HelpByTech
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+              HelpByTech</div>
             </h1>
             <h4 class="exp-subheading">
-              Software Developer - I
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+              Software Developer - I</div>
             </h4>
             <h6 class="location">
-              Jun 2020 - Feb 2021
+              <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+              Jun 2020 - Feb 2021</div>
             </h6>
             <div>
               <ul>
-                <li>
-                  Created a MicroService which integrates third party services and external API's as a part of implementation of ad-fraud detection project.
-                </li>
-                <li>
-                  Optimized a RESTful API for a web application.
-                </li>
-                <li>
-                  Used MongoDB to develop API which interacts with backend databases.
-                </li>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Created a MicroService which integrates third party services and external API's as a part of implementation of ad-fraud detection project.
+                  </li>
+                </div>
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">  
+                  <li>
+                    Optimized a RESTful API for a web application.
+                  </li>
+                </div>  
+                <div data-scroll="is-inside" data-scroll-repeat="10" data-scroll-reverse="true" data-scroll-offset="100">
+                  <li>
+                    Used MongoDB to develop API which interacts with backend databases.
+                  </li>
+                </div>
               </ul> 
             </div>
           </section>
+        </div>
           </div>
           <!-- --------------- Projects-->
           <div class="col">
@@ -272,7 +315,7 @@
               </div>    
             </div>
           </div>
-          </div>
+          
         </div>
       </div>
 
